# CppKoans

./: CMakeLists.txt  README.md  cppkoans.cpp
headers/: all_koans.hpp  fill_me_in_exception.hpp  koan05_pointers.hpp  koan06_files.hpp  koan10_auto.hpp  koan11_lambdas.hpp  koan22_lambdas.hpp  koan23_auto.hpp  koan_handler.cpp
koans/: CMakeLists.txt  file_exists.txt  koan00_get_started.cpp  koan01_number_types.cpp  koan02_character_types.cpp  koan03_further_types.cpp  koan04_arrays.cpp  koan05_pointers.cpp  koan06_files.cpp  koan10_auto.cpp  koan11_lambdas.cpp  koan22_lambdas.cpp  koan23_auto.cpp
